<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/hero_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@android:drawable/ic_menu_camera"
        />

    <EditText
        android:id="@+id/et_nombre_superheroe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/hero_image"
        android:layout_alignTop="@+id/hero_image"
        android:hint="@string/nombre_del_superheroe"
        android:layout_marginStart="16dp"
        />

    <EditText
        android:id="@+id/et_alter_ego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/hero_image"
        android:layout_alignBottom="@+id/hero_image"
        android:hint="@string/alter_ego"
        android:layout_marginStart="16dp"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        android:layout_below="@+id/hero_image"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/text_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/bio"
        android:textColor="@color/black"
        android:textSize="24dp"
        />
    <EditText
        android:id="@+id/et_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_bio"
        android:layout_marginTop="16dp"
        android:hint="@string/descripcion_bio"
        />
    <TextView
        android:id="@+id/poder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_bio"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/poder"
        android:textSize="24dp"
        />
    <RatingBar
        android:id="@+id/power_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/poder"
        />
    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_guardar"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>